--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -23,12 +23,25 @@
     </div>
 
     <br>
+    
+    <table align="center">
+      <tr>
+        <td>
+            <a href="https://apps.apple.com/us/app/the-travel-companion/id1441554384" target="blank">
+              <img class="imageSmallCenter" src="assets/images/tc_logo.png" style="height: 100px; width: 100px;">
+            </a>
+        </td>
+        <td>&nbsp;</td>
+        <td>
+            <a href="http://www.textildruckprofi.com/" target="blank">
+              <img class="imageSmallCenter" src="assets/images/tdp.jpg" style="height: 80px; width: 180px;">
+            </a>
+        </td>
+      </tr>
+    </table>
 
-    <a href="http://www.textildruckprofi.com/" target="blank">
-      <img class="imageSmallCenter" src="assets/images/tdp.jpg" width="10%">
-    </a>
     <div style="text-align:center;">
-      <p><a href="https://github.com/sjaindl" target="_blank">© 2018 Stefan Jaindl</a></p>
+      <p><a href="https://github.com/sjaindl" target="_blank">© 2018-2019 Stefan Jaindl</a></p>
     </div>
   </div>
 </div>
