feat: Update members

--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -21,36 +21,34 @@
 </p>
 
 <p class="small">
-    ADEMI Albert <br>
     BAUER Markus <br>
     BOHACEK Philipp <br>
     DI MEO Rene <br>
     FABIAN Daniel <br>
-    FLADENHOFER Stefan <br>
+    FAULAND David <br>
     GÖDL Patrick <br>
     HILBERGER Erik <br>
     JAINDL Stefan <br>
-    KLÖSCH Philipp <br>
     KOHLBERGER Herbert <br>
     KOVACS David <br>
     KREMSER Michael <br>
     KÜGERL Mario <br>
-    LOSCHER Klaus <br>
     MADERTHONER Christian <br>
     NÖSTEL Rene <br>
     OSWALD Alexander <br>
-    PICHLER Manuel <br>
     PRIMUS Michael <br>
     PUCHLEITNER Florian <br>
     RATHSWOHL Lukas <br>
     REINBACHER Julius <br>
     REINBACHER Nico <br>
     REINBACHER Patrick  <br>
+    REINISCH Bernhard <br>
     RONEGG Robert <br>
     SACKL Markus <br>
     SCHNITTER Christian <br>
     SCHRIEBL Florian <br>
     SINCEK Hrvoje <br>
+    STEINBAUER Stefan <br>
     STELZER Andreas <br>
     THOMANN Michael <br>
     WOLF Patrick <br>
