--- a/src/app/membership/membership.component.html
+++ b/src/app/membership/membership.component.html
@@ -17,7 +17,7 @@
 <br>
 
 <p class="normal">
-    AKTIVE Mitglieder (Stand 11.05.2019):
+    AKTIVE Mitglieder (Stand 14.11.2019):
 </p>
 
 <p class="small">
@@ -55,7 +55,7 @@
 </p>
 
 <p class="normal">
-FÖRDERNDE Mitglieder (Stand 11.05.2019):
+FÖRDERNDE Mitglieder (Stand 14.11.2019):
 </p>
 
 <p class="small">
@@ -68,6 +68,7 @@ FÖRDERNDE Mitglieder (Stand 11.05.2019):
     PACHERNEGG Cornelia <br>
     PACHERNEGG Kerstin <br>
     PURKATHOFER Katharina <br>
+    HERITSCH Thomas <br>
 </p>
 
 <br>
