--- a/src/app/hallofpapp/hallofpapp.component.html
+++ b/src/app/hallofpapp/hallofpapp.component.html
@@ -20,7 +20,13 @@
         <br>
         <table>
           <tr>
-          <h1 class='text' style="font-size:xx-large;font-weight:bold;" matLine>{{pappfan.id}} {{pappfan.name}}</h1>
+          <h4 class='text'>Unterstützer:</h4>
+          <span *ngIf="pappfan.name.length > 25">
+            <h3 class='text' style="font-size:large;font-weight:bold; max-width: 100%;" >{{pappfan.name}}</h3>
+          </span>
+          <span *ngIf="pappfan.name.length <= 25">
+            <h1 class='text' style="font-size:xx-large;font-weight:bold;" matLine>{{pappfan.name}}</h1>
+          </span>
           <h4 class='text'>copyright: Ligaportal.at</h4>
           </tr>
         </table>
