--- a/src/app/hallofpapp/hallofpapp.component.html
+++ b/src/app/hallofpapp/hallofpapp.component.html
@@ -4,7 +4,8 @@
 
 <p class="normal">
   Wir sagen herzlichen Dank für die Unterstützung des Hobbyverein TDP Stainz als Papp-Fan auf unserer Tribüne.
-  Durch Kauf einer Pappfigur im <a href="https://www.ligaportal.at/fan/">Ligaportal</a> kannst du uns auch während der zuschauerfreien Zeit tatkräftig unerstützen. Wir sagen Danke zu unseren Unterstützern:
+  Durch Kauf einer Pappfigur im <a href="https://www.ligaportal.at/fan/">Ligaportal</a> kannst du uns auch während der zuschauerfreien Zeit tatkräftig unterstützen. 
+  Wir sagen Danke zu unseren unglaulichen {{pappfans.length}} Unterstützern:
 </p>
 
 <br>
