--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,16 +10,19 @@
   <div fxFlex="100%" fxFlex.gt-sm="45%">
     <div style="text-align:center">
       <a md-icon-button class="btn-facebook" href="https://www.facebook.com/hvtdpstainz/" target="_blank"><i class="fab fa-facebook fa-lg"></i></a>
+      &nbsp;
       <a md-icon-button class="btn-twitter" href="https://twitter.com/HvStainz/" target="_blank"><i class="fab fa-twitter fa-lg"></i></a>
+      &nbsp;
       <a md-icon-button class="btn-instagram" href="https://www.instagram.com/hvtdpstainz_2014/" target="_blank"><i class="fab fa-instagram fa-lg"></i></a>
-      <a md-icon-button class="btn-mail" href="mailto:hvtdpstainz@gmx.at"><i class="fab fa-envelope-o fa-lg"></i></a>
+      &nbsp;
+      <a md-icon-button class="btn-mail" href="mailto:hvtdpstainz@gmx.at"><i class="fas fa-envelope"></i></a>
     </div>
   </div>
   <div fxFlex="100%" fxFlexAlign="center center">
     <br>
 
     <div *ngIf="sessions" style="text-align:center;">
-      Der HV TDP bedankt sich bei {{sessions}} Besuchern seit 23.07.2018!
+      Der HV TDP bedankt sich für {{sessions}} Website-Aufrufe seit dem 23.07.2018!
     </div>
 
     <br>
