Add Advent module

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,6 +11,8 @@
             <span class="flex-spacer"></span> -->
             &nbsp;<a md-button routerLink="/news" routerLinkActive="active"><span class="fa fa-bookmark fa-sm"></span> News</a>
             <span class="flex-spacer"></span>
+            <!-- &nbsp;<a md-button routerLink="/advent" routerLinkActive="active"><span class="fas fa-candy-cane fa-sm"></span> Adventkalender</a>
+            <span class="flex-spacer"></span> -->
             &nbsp;<a md-button routerLink="/team" routerLinkActive="active"><span class="fa fa-portrait fa-sm"></span> Mannschaft</a>
             <span class="flex-spacer"></span>
             &nbsp;<a md-button routerLink="/championship" routerLinkActive="active"><span class="fa fa-award fa-sm"></span> Meisterschaft</a>
@@ -60,6 +62,10 @@
             <span class="fa fa-bookmark fa-sm"></span>
             &nbsp;News
           </a>
+          <!-- <a (click)="sidenav.toggle();" md-button routerLink="/advent" routerLinkActive="active" mat-list-item>
+            <span class="fas fa-candy-cane fa-sm"></span>
+            &nbsp;Adventkalender
+          </a> -->
           <a (click)="sidenav.toggle();" md-button routerLink="/team" routerLinkActive="active" mat-list-item>
             <span class="fa fa-portrait fa-sm"></span>
             &nbsp;Mannschaft
