Update fanshop html

--- a/src/app/fanshop/fanshop.component.html
+++ b/src/app/fanshop/fanshop.component.html
@@ -20,6 +20,10 @@ fxLayoutGap="10px">
   </p>
 
   <p class="small">
+    Als Dankeschön bieten wir unseren treuen Vereinsmitgliedern einen Rabatt von 15 % auf alle Artikel an!
+  </p>
+
+  <p class="small">
     Folgende Artikel stehen zur Auswahl:
     <br>
     (bestellen ganz einfach mit einer Nachricht an unsere Facebookseite oder E-Mail Adresse)
