--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -29,38 +29,34 @@
 </div>
 
 <!-- Image Slider -->
-
-    <ngu-carousel *ngIf="carouselItems && !isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems" 
-    style="margin: auto;width: 50%; padding: 10px;">
-      <ngu-tile *nguCarouselDef="let item;">
+    <ngu-carousel *ngIf="carouselItems && !isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems" style="margin: auto; padding: 100px;">
+      <div class="item" *nguCarouselDef="let item;">
         <div class="tile">
             <table>
                 <tr>
-                  <img *ngIf="isMobile" width="250px" src="{{imageBaseUrl + item.imagePath}}" (click)="showImageDetails(item)">
-                  <img *ngIf="!isMobile" width="500px" src="{{imageBaseUrl + item.imagePath}}" (click)="showImageDetails(item)">
+                  <img class="bordered" height="500vh" src="{{imageBaseUrl + item.imagePath}}" (click)="showImageDetails(item)">
                 </tr>
 
                 <tr>
                   <p class="center">{{item.title}} </p>
                 </tr>
             </table>
-        </div> 
-      </ngu-tile>
-      <button NguCarouselNext class="rightRs">></button>
-      <button NguCarouselPrev class="leftRs"><</button>
+        </div>
+      </div>
+      <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+      <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
       <ul class="myPoint" NguCarouselPoint>
         <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
       </ul>
     </ngu-carousel>
-    
-    
+
     <ngu-carousel *ngIf="carouselItems && isMobile" #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems">
-      <ngu-tile *nguCarouselDef="let item;">
+      <div class="item" *nguCarouselDef="let item;">
         <div class="tile">
+
             <table>
                 <tr>
-                  <img *ngIf="isMobile" width="250px" src="{{imageBaseUrl + item.imagePath}}" (click)="showImageDetails(item)">
-                  <img *ngIf="!isMobile" width="500px" src="{{imageBaseUrl + item.imagePath}}" (click)="showImageDetails(item)">
+                  <img class="bordered" width="200vw" src="{{imageBaseUrl + item.imagePath}}" (click)="showImageDetails(item)">
                 </tr>
 
                 <tr>
@@ -68,9 +64,9 @@
                 </tr>
             </table>
         </div> 
-      </ngu-tile>
-      <button NguCarouselNext class="rightRs">></button>
-      <button NguCarouselPrev class="leftRs"><</button>
+      </div>
+      <button NguCarouselPrev class="leftRs" [style.opacity]="myCarousel.isFirst ? 0.5:1">&lt;</button>
+      <button NguCarouselNext class="rightRs" [style.opacity]="myCarousel.isLast ? 0.5:1">&gt;</button>
       <ul class="myPoint" NguCarouselPoint>
         <li *ngFor="let j of myCarousel.pointNumbers; let i = index" [class.active]="i==myCarousel.activePoint" (click)="myCarousel.moveTo(i)"></li>
       </ul>
