--- a/src/styles.css
+++ b/src/styles.css
@@ -189,9 +189,9 @@ h1.header, h2.header, h3.header {
 
   
 .tile {
-    min-height: 500px;
-    max-height: 500px;
-    /* background-color: #ccc;
+    /* min-height: 50vh;
+    max-height: 50vh;
+    background-color: #ccc;
     background-size: cover !important; */
     display: flex;
     align-items: center;
@@ -246,3 +246,31 @@ h1.header, h2.header, h3.header {
       transform: scale(1.2);
     }
   
+  .bordered {
+    border-style: solid;
+    border-width: 10px;
+  }
+
+/* Carousel */
+
+#container {
+    width: 80%;
+    margin: 5em auto;
+    padding: 0;
+    background:#fff;
+    background-color: transparent;
+}
+
+.items {
+    /* min-width:300;
+    max-width:300; */
+    align-content: center;
+    /* height:400px; */
+    /* background:#ECECEC; */
+}
+
+#left, #right {
+	margin: 30px;
+	width: 100%;
+	z-index: 11;
+}
